# djangocms-link

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  addon.json  aldryn_config.py  conftest.py  makemessages.py  pyproject.toml  requirements-tests.txt  requirements.txt  schemamigration.py  setup.cfg  setup.py  test_settings.py  tox.ini  updatetranslations.sh
.github/workflows/: lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_link/: __init__.py  admin.py  apps.py  cms_plugins.py  compat.py  fields.py  fields_select2.py  fields_select2_legacy.py  forms.py  helpers.py  models.py  validators.py
djangocms_link/locale/af/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/be/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/bg/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/bn/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ca/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/cmn/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/cs/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/cy/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/da/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/el/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/en_GB/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/en_HK/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/en_US/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/eo/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/es_AR/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/es_BO/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/es_DO/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/et/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/eu/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fa/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fa_IR/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fi/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fi_FI/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fr_CA/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ga/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/gl/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/gu/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/he/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/hi/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/hr/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/hu/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/id/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/is/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/is_IS/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ja/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ka/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/kk/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/km/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ko/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ku_IQ/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/lt/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/lt_LT/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/lv/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/mn/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/mn_MN/LC_MESSAGES/: django.mo  django.po
djangocms_link/locale/ms/LC_MESSAGES/: django.mo  (+1 more)
djangocms_link/migrations/: 0001_initial.py  0002_auto_20140929_1705.py  0002_auto__add_field_link_anchor.py  0002_plugin_rename.py  0003_auto_20150212_1310.py  0003_auto__chg_field_link_url__chg_field_link_page_link.py  0004_auto_20150708_1133.py  0005_auto_20150915_1704.py  0005_auto_20151003_1710.py  0006_remove_related_name_for_cmsplugin_ptr.py  0007_set_related_name_for_cmsplugin_ptr.py  0008_link_attributes.py  0009_auto_20160705_1344.py  0010_adapted_fields.py  0011_fixed_null_values.py  0012_removed_null.py  0013_fix_hostname.py  0014_link_file_link.py  0014_replace_urlfield_by_charfield.py  0015_auto_20190621_0407.py  0016_alter_link_cmsplugin_ptr.py  0017_link_link.py  0018_remove_link_anchor_remove_link_external_link_and_more.py  0019_alter_link_link.py  0020_rename_target_link_link_target.py
djangocms_link/migrations_django/: 0001_initial.py
djangocms_link/south_migrations/: 0002_auto__add_field_link_phone.py  0003_auto__add_field_link_anchor__chg_field_link_page_link.py  0004_auto__chg_field_link_url.py  0005_auto__chg_field_link_mailto.py
djangocms_link/static/djangocms_link/: link-widget.css  link-widget.js
djangocms_link/templatetags/: djangocms_link_tags.py
djangocms_link/tests/: tests_model.py
tests/: fixtures.py  requirements-tests.txt  requirements.txt  settings.py  test_endpoint.py  test_field.py  test_fields.py  test_file_plugin.py  test_helpers.py  test_link_dict.py  test_linkable_models.py  test_migrations.py  test_model.py  test_models.py  test_plugins.py  test_settings.py  test_validators.py  tests_field.py  tests_model.py  x_test_cms_config.py
tests/requirements/: base.txt  dj22_cms40.txt  dj40_cms311.txt  dj42_cms41.txt  dj50_cms311.txt  dj50_cms41.txt  dj51_cms311.txt  dj51_cms41.txt  dj52_cms41.txt  dj52_cms50.txt
tests/utils/: admin.py  cms_config.py  models.py  urls.py
tests/utils/templates/: static_placeholder.html
(+79 files in other folders)
